--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Parabéns @Christian Ternus 🎉🎉</title>
+  <description>muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻</description>
 </head>
 <body>
   <h1>Parabéns @Christian Ternus 🎉🎉 muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻</h1>
