--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parabéns @Christian Ternus 🎉🎉</title>
-  <description>muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻</description>
+  <meta name="description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
+  <meta property="og:image" content="https://imgur.com/RevuIGs" />
 </head>
 <body>
   <h1>Parabéns @Christian Ternus 🎉🎉 muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻</h1>
