--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parabéns @Christian Ternus 🎉🎉</title>
-  <meta property="og:description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
-  <meta property="og:image" content="https://imgur.com/RevuIGs" />
+  <!-- Primary Meta Tags -->
+<title>Parabéns @Christian Ternus 🎉🎉 </title>
+<meta name="title" content="Parabéns @Christian Ternus 🎉🎉 ">
+<meta name="description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://viniciuspdha.github.io/">
+<meta property="og:title" content="Parabéns @Christian Ternus 🎉🎉 ">
+<meta property="og:description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
+<meta property="og:image" content="https://imgur.com/RevuIGs">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://viniciuspdha.github.io/">
+<meta property="twitter:title" content="Parabéns @Christian Ternus 🎉🎉 ">
+<meta property="twitter:description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
+<meta property="twitter:image" content="https://imgur.com/RevuIGs">
+  
 </head>
 <body>
   <h1>Parabéns @Christian Ternus 🎉🎉 muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻</h1>
