--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <meta property="og:url" content="https://viniciuspdha.github.io/">
 <meta property="og:title" content="Parabéns @Christian Ternus 🎉🎉 ">
 <meta property="og:description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
-<meta property="og:image" content="https://imgur.com/RevuIGs">
+<meta property="og:image" content="https://i.imgur.com/RevuIGs.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://viniciuspdha.github.io/">
 <meta property="twitter:title" content="Parabéns @Christian Ternus 🎉🎉 ">
 <meta property="twitter:description" content="muita saúde, felicidade, sucesso para vc. Aguardando para o chopp dia 11 🍻">
-<meta property="twitter:image" content="https://imgur.com/RevuIGs">
+<meta property="twitter:image" content="https://i.imgur.com/RevuIGs.png">
   
 </head>
 <body>
